objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ABA_Number__c</fullName>
        <label>ABA Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <description>Name of the associated account for third-party application purposes (do not delete).</description>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Programs__c</fullName>
        <formula>TEXT(Account.Agency_or_Non_Agency__c)</formula>
        <label>Account Programs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Website__c</fullName>
        <label>Account Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Contact__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_PMP__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active PMP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_PREP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active PREP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Attributes__c</fullName>
        <label>Additional Attributes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_Website__c</fullName>
        <label>Alternative Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ApartmentNo__c</fullName>
        <label>ApartmentNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Birth_Date_Free_Response__c</fullName>
        <label>Birth Date (MM/DD/YYYY)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Total__c</fullName>
        <formula>NULLVALUE(Assets_Bank_Acct__c,0) +  NULLVALUE(Assets_Brokerage_Acct__c,0) +  NULLVALUE(Assets_Other__c,0) +  NULLVALUE(Assets_Other_Real_Estate__c,0) +  NULLVALUE(Assets_Retirement_Acct__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Bank_Acct__c</fullName>
        <label>Assets Bank Acct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Brokerage_Acct__c</fullName>
        <label>Assets Brokerage Acct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Other_Real_Estate__c</fullName>
        <label>Assets Other Real Estate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Other__c</fullName>
        <label>Assets Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Retirement_Acct__c</fullName>
        <label>Assets Retirement Acct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Autopilot_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether contact should be included in Autopilot automated marketing platform.</inlineHelpText>
        <label>Autopilot Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avatar__c</fullName>
        <label>Avatar</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BRE_Number__c</fullName>
        <label>BRE Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankrupcy_in_last_seven_years__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bankrupcy in last seven years?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_CRM_ID__c</fullName>
        <externalId>true</externalId>
        <label>Base CRM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_CRM_Owner__c</fullName>
        <label>Base CRM Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Time_to_Reach__c</fullName>
        <label>Best Time to Reach</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Early Morning (7-9)</fullName>
                </value>
                <value>
                    <fullName>Morning (9-12)</fullName>
                </value>
                <value>
                    <fullName>Early Afternoon (12-3)</fullName>
                </value>
                <value>
                    <fullName>Late Afternoon (3-6)</fullName>
                </value>
                <value>
                    <fullName>Evening (6-9)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Branch_Name_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Branch Name)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Phone__c</fullName>
        <label>Branch Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Buyer_Persona__c</fullName>
        <label>Buyer Persona</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Economic</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Objector</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Deal_with_Unison_in_Last_90_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Deal with Unison in Last 90 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_name__c</fullName>
        <label>Company name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conforming2__c</fullName>
        <formula>Account.Parent.Parent_Conforming__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conforming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conforming__c</fullName>
        <formula>Account.Conforming2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conforming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Count__c</fullName>
        <formula>1</formula>
        <label>Contact Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Broker/Owner</fullName>
                </value>
                <value>
                    <fullName>Co-Applicant</fullName>
                </value>
                <value>
                    <fullName>Editor/Producer</fullName>
                </value>
                <value>
                    <fullName>Escrow</fullName>
                </value>
                <value>
                    <fullName>Escrow Assistant</fullName>
                </value>
                <value>
                    <fullName>Flood Insurance</fullName>
                </value>
                <value>
                    <fullName>Hazard Insurance</fullName>
                </value>
                <value>
                    <fullName>Journalist</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Loan Officer - Reverse</fullName>
                </value>
                <value>
                    <fullName>Loan Ops</fullName>
                </value>
                <value>
                    <fullName>Non-Agent</fullName>
                </value>
                <value>
                    <fullName>Non-LO</fullName>
                </value>
                <value>
                    <fullName>Other Household Role</fullName>
                </value>
                <value>
                    <fullName>Title</fullName>
                </value>
                <value>
                    <fullName>Title Assistant</fullName>
                </value>
                <value>
                    <fullName>Trustee</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>Managing Member</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Chairman</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Invited to Train</fullName>
                </value>
                <value>
                    <fullName>Training Scheduled</fullName>
                </value>
                <value>
                    <fullName>Trained</fullName>
                </value>
                <value>
                    <fullName>Outreach</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>1st Lead Submitted</fullName>
                </value>
                <value>
                    <fullName>2nd Lead Submitted</fullName>
                </value>
                <value>
                    <fullName>3rd Lead Submitted</fullName>
                </value>
                <value>
                    <fullName>LO Active Converted</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converted_Date_Time__c</fullName>
        <label>Converted Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Converted__c</fullName>
        <description>For counting active contact</description>
        <formula>if( text(Contact_Status__c)="LO Active Converted",1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cookie__c</fullName>
        <label>Cookie</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CostCo_Onboarding_Status__c</fullName>
        <label>CostCo Onboarding Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Uncontacted</fullName>
                </value>
                <value>
                    <fullName>Bad Phone Number</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Not a Prospect</fullName>
                </value>
                <value>
                    <fullName>1 LVM1</fullName>
                </value>
                <value>
                    <fullName>2 Call</fullName>
                </value>
                <value>
                    <fullName>3 Call</fullName>
                </value>
                <value>
                    <fullName>4 LVM2</fullName>
                </value>
                <value>
                    <fullName>5 Call</fullName>
                </value>
                <value>
                    <fullName>6 Call</fullName>
                </value>
                <value>
                    <fullName>7 LVM3</fullName>
                </value>
                <value>
                    <fullName>8 Call</fullName>
                </value>
                <value>
                    <fullName>Qualified – Lo</fullName>
                </value>
                <value>
                    <fullName>Qualified – Med</fullName>
                </value>
                <value>
                    <fullName>Qualified – Hi</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Onboarded</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Never Connected</fullName>
                </value>
                <value>
                    <fullName>Do Not Lend</fullName>
                </value>
                <value>
                    <fullName>Deal in Hand</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_LOP_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create LOP User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_At__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credco_Household_Income__c</fullName>
        <label>Credco Household Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Past</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deactivate_LOP_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate LOP User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Debt__c</fullName>
        <label>Debt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debt_to_Income_Ratio__c</fullName>
        <label>Debt-to-Income Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Declaration_Bankruptcy__c</fullName>
        <label>Declaration Bankruptcy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Deed_in_Lieu__c</fullName>
        <label>Declaration Deed in Lieu</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Delinquency__c</fullName>
        <label>Declaration Delinquency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Explanation__c</fullName>
        <label>Declaration Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Declaration_Felony__c</fullName>
        <label>Declaration Felony</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Foreclosure__c</fullName>
        <label>Declaration Foreclosure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Intend_to_Occupy__c</fullName>
        <label>Declaration Intend to Occupy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Lawsuit__c</fullName>
        <label>Declaration Lawsuit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Outstanding_Judgments__c</fullName>
        <label>Declaration Outstanding Judgments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Permanent_Resident__c</fullName>
        <label>Declaration Permanent Resident</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Power_of_Attorney__c</fullName>
        <label>Declaration Power of Attorney</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_US_Citizen__c</fullName>
        <label>Declaration US Citizen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delighted_Error__c</fullName>
        <label>Delighted Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delinquencies__c</fullName>
        <label>Delinquencies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Topics__c</fullName>
        <label>Detailed Topics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affluent Lifestyle</fullName>
                </value>
                <value>
                    <fullName>African American</fullName>
                </value>
                <value>
                    <fullName>Aging</fullName>
                </value>
                <value>
                    <fullName>AM Drive-Time</fullName>
                </value>
                <value>
                    <fullName>Amusement Parks &amp; Zoos</fullName>
                </value>
                <value>
                    <fullName>Architecture &amp; Design</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Beauty &amp; Grooming</fullName>
                </value>
                <value>
                    <fullName>Beer</fullName>
                </value>
                <value>
                    <fullName>Boating &amp; Yachting</fullName>
                </value>
                <value>
                    <fullName>Book Reviews</fullName>
                </value>
                <value>
                    <fullName>Breaking News</fullName>
                </value>
                <value>
                    <fullName>Brewing</fullName>
                </value>
                <value>
                    <fullName>Business &amp; Finance</fullName>
                </value>
                <value>
                    <fullName>Calendar &amp; Events</fullName>
                </value>
                <value>
                    <fullName>Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Careers</fullName>
                </value>
                <value>
                    <fullName>Catholic</fullName>
                </value>
                <value>
                    <fullName>CEOs &amp; Business Leaders</fullName>
                </value>
                <value>
                    <fullName>Chambers of Commerce</fullName>
                </value>
                <value>
                    <fullName>Charitable Foundations</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Circulation</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Civil Rights</fullName>
                </value>
                <value>
                    <fullName>Coffee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Let_Affiliates_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Let Affiliates Market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Share_with_Non_Affiliates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Share with Non-Affiliates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DontShareCreditworthinessInformation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don't Share Creditworthiness Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_Password__c</fullName>
        <label>ESC Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Username__c</fullName>
        <label>ESC Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Address__c</fullName>
        <label>Employer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employer_Phone__c</fullName>
        <label>Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Segment_Calc__c</fullName>
        <formula>IF( AND( Pipeline_Value__c &gt;0, Inquiry_in_Last_30_Days__c ),"A",
    IF( OR(Pipeline_Value__c&gt;0, Inquiry_in_Last_30_Days__c ),"B",
        IF( Portal_Login_Last_30_Days__c ,"C","D")
      )
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Measure of Engagement from production and Portal activity. Contacts with both active pipeline and a property inquiry from the portal in the last 30 days are "A"; with either pipeline or recent inquiry "B"; login in the last 30 days "C", else "D".</inlineHelpText>
        <label>Engagement Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Status__c</fullName>
        <label>Engagement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>High_Medium_Low</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equifax_Credit_Score__c</fullName>
        <label>Equifax Credit Score</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escrow_Officer_Name__c</fullName>
        <label>Escrow Officer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escrow_case__c</fullName>
        <label>Escrow case #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Income__c</fullName>
        <label>Income Monthly Est Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Experian_Credit_Score__c</fullName>
        <label>Experian Credit Score</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fed_Reference__c</fullName>
        <label>Fed Reference #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Felonies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Felonies?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finder_Fee_Commission__c</fullName>
        <inlineHelpText>5% if signed within 45 days
3% if 45+ days</inlineHelpText>
        <label>Finder Fee Commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finder_Promotional_Pricing_Deadline__c</fullName>
        <description>Date after which leads introduced by Finders no longer receive promotional compensation for introduction.</description>
        <formula>Account.Finders_Agreement_Date__c + 44</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date after which leads introduced by Finders no longer receive promotional compensation for introduction.</inlineHelpText>
        <label>Finder Promotional Pricing Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Footprint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Footprint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fraud_alerts__c</fullName>
        <label>Fraud alerts</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>male</fullName>
                </value>
                <value>
                    <fullName>female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Given_deed_for_foreclosure_in_7_years__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Given deed for foreclosure in 7 years?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GrandTotalDelinquencies__c</fullName>
        <label>Grand Total Delinquencies</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HBC_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if this contact can be used for Home buyer Canada</description>
        <label>HBC Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HB_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HB Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HB_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HB Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HO_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HO Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highest_Degree_Earned__c</fullName>
        <label>Highest Degree Earned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Base__c</fullName>
        <label>Income Monthly Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Commissions__c</fullName>
        <label>Income Monthly Commissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Div_Interest__c</fullName>
        <label>Income Monthly Div/Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Net_Rental__c</fullName>
        <label>Income Monthly Net Rental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Other__c</fullName>
        <label>Income Monthly Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Overtime__c</fullName>
        <label>Income Monthly Overtime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly_Social_Security__c</fullName>
        <label>Income Monthly Social Security</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Monthly__c</fullName>
        <label>Income Monthly Bonuses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Total__c</fullName>
        <description>Total of all application-field income items</description>
        <formula>NULLVALUE(Income_Monthly_Base__c,0) + NULLVALUE(Income_Monthly__c,0) +  NULLVALUE(Income_Monthly_Commissions__c,0) + NULLVALUE(Income_Monthly_Div_Interest__c,0) +  NULLVALUE(Income_Monthly_Other__c,0) +  NULLVALUE(Income_Monthly_Overtime__c,0) +  NULLVALUE(Income_Monthly_Social_Security__c,0) + NULLVALUE(Income_Monthly_Net_Rental__c,0)</formula>
        <label>Income Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>